<resources>
    <string name="app_name">Uber</string>
    <string name="title_activity_driver_maps">Map</string>
    <string name="sign_up">Sign Up</string>
    <string name="hello_"> Hello!</string>
    <string name="let_s_creat">" Let's create your account"</string>
    <string name="or">or</string>
    <string name="already_hav">Already have an account?</string>
    <string name="sign_in">Sign in</string>
    <string name="uber">Uber</string>
</resources>
