<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#35373D"
    android:orientation="vertical"
    tools:context=".DriverLoginActivity">

    <TextView
        android:id="@+id/sign_up"
        android:layout_width="90dp"
        android:layout_height="35dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:fontFamily="@font/secular_one"
        android:gravity="top"
        android:text="@string/sign_up"
        android:textAppearance="@style/sign_up"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.054" />

    <ImageButton
        android:id="@+id/imageButtonBack"
        android:layout_width="21.53dp"
        android:layout_height="20.53dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="#00000000"
        android:clickable="true"
        android:src="@drawable/backbutton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.061"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.053" />

    <TextView
        android:id="@+id/let_s_creat"
        android:layout_width="312dp"
        android:layout_height="46dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:gravity="top"
        android:text="@string/let_s_creat"
        android:textAppearance="@style/let_s_creat"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.325"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hello_"
        app:layout_constraintVertical_bias="0.025" />

    <TextView
        android:id="@+id/hello_"
        android:layout_width="97dp"
        android:layout_height="45dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"

        android:fontFamily="@font/secular_one"
        android:gravity="top"
        android:text="@string/hello_"
        android:textAppearance="@style/hello_"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.14"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.116" />

    <EditText
        android:id="@+id/email_editTxt"
        style="@style/MyEditTextStyle"
        android:layout_width="353dp"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="64dp"
        android:fontFamily="serif"
        android:hint="Email id"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/let_s_creat" />

    <EditText
        android:id="@+id/password_editTxt"
        style="@style/MyEditTextStyle"
        android:layout_width="353dp"
        android:layout_height="40dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="28dp"
        android:hint="Password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="@+id/SignUp_butt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.551"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_editTxt"
        app:layout_constraintVertical_bias="0.0" />

    <ImageButton
        android:id="@+id/SignUp_butt"
        android:layout_width="353dp"
        android:layout_height="48dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="132dp"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/butcreate"
        android:text="Login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_editTxt" />

    <TextView
        android:id="@+id/or"
        android:layout_width="24.55dp"
        android:layout_height="26dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="201dp"
        android:gravity="center_horizontal|top"
        android:text="@string/or"
        android:textAppearance="@style/or"
        app:layout_constraintBottom_toTopOf="@+id/sign_in_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_editTxt"
        app:layout_constraintVertical_bias="0.095" />

    <ImageButton
        android:id="@+id/Login_butt"
        android:layout_width="353dp"
        android:layout_height="48dp"


        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/signinbutton"
        android:text="SignUp"
        app:layout_constraintBottom_toBottomOf="@+id/sign_in_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.551"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SignUp_butt"
        app:layout_constraintVertical_bias="0.191" />

    <ImageButton
        android:id="@+id/sign_in_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="68dp"
        android:background="@drawable/button_corners"
        android:clickable="true"
        android:src="@drawable/google"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SignUp_butt">

    </ImageButton>

    <TextView
        android:id="@+id/already_hav"
        android:layout_width="wrap_content"
        android:layout_height="29dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:gravity="top"
        android:text="@string/already_hav"
        android:textAppearance="@style/already_hav"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.348"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_in_button"
        app:layout_constraintVertical_bias="0.504" />

    <TextView
        android:id="@+id/sign_in"
        android:layout_width="69dp"
        android:layout_height="29dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:gravity="top"
        android:text="@string/sign_in"
        android:textAppearance="@style/sign_in"
        app:layout_constraintBottom_toBottomOf="@+id/already_hav"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.112"
        app:layout_constraintStart_toEndOf="@+id/already_hav"
        app:layout_constraintTop_toBottomOf="@+id/SignUp_butt"
        app:layout_constraintVertical_bias="1.0" />
</androidx.constraintlayout.widget.ConstraintLayout>